post api completed and the application is running fine without any error along with this image upload is also done

--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -11,3 +11,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #create,update,create-drop,
 spring.jpa.hibernate.ddl-auto=update
+
+#To see the logs into console related to jpa
+spring.jpa.show-sql=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+project.image=image/
+
+
+
