Comments Implemented and spring security configure

--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -21,4 +21,11 @@ spring.servlet.multipart.max-request-size=10MB
 project.image=image/
 
 
+logging.level.org.springframework.security=DEBUG
+
+spring.security.user.name=ujjwal
+spring.security.user.password=ujjwal
+spring.security.user.roles=ADMIN
+
+
 
